mediaserver/templates/transmissionService.yaml
apiVersion: v1
kind: Service
metadata:
  name: transmission
spec:
  selector:
    app: transmission
  ports:
  - name: web
    protocol: TCP
    port: 9091
    targetPort: 9091
  - name: peer
    protocol: TCP
    port: 51413
    targetPort: 51413
  type: NodePort
