mediaserver/templates/plexIngress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex
spec:
  ingressClassName: nginx
  rules:
    - host: plex.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: plex
                port:
                  number: 32400
