mediaserver/templates/radarrIngress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: radarr
spec:
  rules:
  - host: radarr.lan
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: radarr
              port:
                number: 7878
