mediaserver/templates/transmissionIngress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transmission
spec:
  ingressClassName: nginx
  rules:
  - host: transmission.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: transmission
            port:
              number: 9091
